--- a/About/about.css
+++ b/About/about.css
@@ -77,7 +77,7 @@ header {
     font-size: 64px;
 }
 
-.img1, .text2, .text3, .text4, .text5, .text6 {
+.img1, .text2, .text3, .text4, .text5, .text6, .text7 {
     display: flex;
     align-items: center;
 }
@@ -86,7 +86,7 @@ header {
     color: white;
 }
 
-.about1, .about2, .about3, .about4, .about5, .about6{
+.about1, .about2, .about3, .about4, .about5, .about6, .about7{
     position: relative;
     font-family: 'Montserrat', sans-serif;
     font-size: 46px;
@@ -95,7 +95,7 @@ header {
     font-weight: 400;  
 }
 
-.about1, .about3, .about5{
+.about1, .about3, .about5, .about7{
     position: relative;
     left: 50px;
 }
@@ -117,6 +117,10 @@ header {
     width: 45%;
 }
 
+.img7 {
+    width: 45%;
+}
+
 .text3 {
     position: relative;
     top: 100px; 
@@ -135,6 +139,11 @@ header {
 .text6 {
     position: relative;
     top: 400px;
+}
+
+.text7 {
+    position: relative;
+    top: 500px;
 }
 
 
