--- a/Delivery/delivery.css
+++ b/Delivery/delivery.css
@@ -53,6 +53,26 @@ header {
     color: white;
 }
 
+.myLinks {
+    position: relative;
+    display: none;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #323232;
+    border-radius: 5px;
+    border: 1px solid #FF3838;
+
+}
+
+.myLinks a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
+    line-height: 40px;
+    text-align: center;
+}
+
 .Delivery {
     border-bottom: 1px solid #FF3838;
 }
@@ -244,6 +264,9 @@ h1 {
 
     .signMenu {
         display: block;
+        background-color: transparent;
+        border: 0;
+        padding: 0;
     }
 
     .text1 {
@@ -280,6 +303,11 @@ h1 {
     header {
         height: 731px;
         background: url("img/Фон\ 1\ Mob.png");
+    }
+    
+    .myLinks {
+        width: 90%;
+        margin: 0 auto;
     }
 
     .DelivImg1 {
